2008-04-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (-_paintPath:, -_doComplexPath:...):
	Correct the handling of complex path filling. This is needed for
	the glyph drawing.
	
2008-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	(-appendBezierPathWithGlyphs:count:toBezierPath:) Implement this
	method with code copied over from the art backend.

2008-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m (-glyphPacking): Add missing method.
	* Source/gsc/GSContext.m
	(-appendBezierPathWithPackedGlyphs:path:): Send on to gstate.
	* Headers/gsc/GSGStateOps.h
	(-appendBezierPathWithPackedGlyphs:path:): New method.
	* Source/gsc/GSGState.m (-DPScharpath:,
	-appendBezierPathWithPackedGlyphs:path:): Implement these methods.
	* Source/xlib/GSXftFontInfo.m (-coveredCharacterSet) Add missing
	method.

2008-04-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32FontInfo.m
	(-appendBezierPathWithGlyphs:count:toBezierPath:): New method.
	Patch by Christopher Armstrong <carmstrong@fastmail.com.au>.
	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m: Moved ligature handling code from here
	to gui.
	* Source/cairo/CairoFontInfo.m (-glyphIsEncoded:): Report all
	ligatures as not supported, as we have no way to determine if they
	exist in the font.

2008-04-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontInfo.m (-appendBezierPathWithGlyphs:...):
	Correct implementation.
	* Source/cairo/CairoGState.m (-DPScharpath::): Correct implementation.

2008-03-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m,
	* Source/cairo/CairoFaceInfo.m,
	* Source/cairo/Win32CairoSurface.m,
	* Source/cairo/CairoFontInfo.m,
	* Source/cairo/Win32CairoGlitzSurface.m,
	* Source/cairo/CairoGState.m:
	Clean up and better error check and reporting on cairo and malloc calls.

2008-03-19  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.2

	* configure.ac: Add --without-freetype option
